[tool.poetry]
name = "web-scraper"
version = "0.1.0"
description = ""
authors = ["Takuma Kira <takuma@kirakiraworx.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
